--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,11 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  buildConfiguration: 'Release'
-
-steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+  buildConfiguration: 'Build'
+stages:
+  - stage: Build
+    jobs:
+    - job: Build
+      steps:
+      - script: dotnet build --configuration $(buildConfiguration)
+        displayName: 'dotnet build $(buildConfiguration)'
