--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,9 @@ stages:
     jobs:
     - job: Build
       steps:
-      - script: dotnet build --configuration $(buildConfiguration)
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: build
+          projects: '**/*.csproj'
+          arguments: '--configuration $(buildConfiguration)'
         displayName: 'dotnet build $(buildConfiguration)'
