changing text intentionally

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  buildConfiguration: 'Build'
+  buildConfiguration: 'Release'
 stages:
   - stage: Build
     jobs:
