added another stage 'Deploy' to the pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,3 +22,4 @@ stages:
           projects: '**/*.csproj'
           arguments: '--configuration $(buildConfiguration)'
         displayName: 'dotnet build $(buildConfiguration)'
+  - stage: Deploy
