resolving stage issue by adding a job

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,3 +23,5 @@ stages:
           arguments: '--configuration $(buildConfiguration)'
         displayName: 'dotnet build $(buildConfiguration)'
   - stage: Deploy
+    jobs:
+      - job: Build
