--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,15 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-stages:
+stages: 
+  
+  # source stage
+  - stage: Source
+    jobs:
+    - job: 
+  
+  
+  # build stage
   - stage: Build
     jobs:
     - job: Build
@@ -22,6 +30,14 @@ stages:
           projects: '**/*.csproj'
           arguments: '--configuration $(buildConfiguration)'
         displayName: 'dotnet build $(buildConfiguration)'
+  
+  # test stage
+  - stage: Test
+    jobs:
+    - job: Build
+    - job: Run
+
+  # deploy stage
   - stage: Deploy
     jobs:
-      - job: Build
+    - job: 
