--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,11 @@ stages:
     - job: Build
     - job: Run
 
+  # release stage
+  - stage: Release
+    jobs:
+    - job: 
+
   # deploy stage
   - stage: Deploy
     jobs:
